added and updated TCs